--- a/index.html
+++ b/index.html
@@ -5,97 +5,127 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Atlas Medical</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+<head>
+    <title>Atlas Medical</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="assets/js/jquery.min.js"></script>
+    <script> 
+    $(function(){
+      $("#footer").load("footer.html"); 
+    });
+    </script> 
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Atlas Medical</h1>
-						<p>Preventing Pressure injuries through intelligent, variable stiffness technology</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Read More</a></li>
-						</ul>
-					</div>
+<body class="is-preload">
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Atlas Medical</a>
-					</header>
+    <!-- Wrapper -->
+    <div id="wrapper" class="fade-in">
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">News</a></li>
-							<li><a href="generic.html">About</a></li>
-							<li><a href="elements.html">Blog</a></li>
-						</ul>
-					</nav>
+        <!-- Intro -->
+        <div id="intro">
+            <h1>Atlas Medical</h1>
+            <p>Preventing Pressure injuries through intelligent, variable stiffness technology</p>
+            <ul class="actions">
+                <li><a href="#header" class="button icon solo fa-arrow-down scrolly">Read More</a></li>
+            </ul>
+        </div>
 
-				<!-- Main -->
-					<div id="main">
+        <!-- Header -->
+        <header id="header">
+            <a href="index.html" class="logo">Atlas Medical</a>
+        </header>
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date">November 1, 2018</span>
-									<h2><a href="#">Quantum Valley Problem Pitch<br />
-									Open Problem Winner</a></h2>
-									<p>Colin Cooke from Atlas Medical succesfully pitched the problem of pressure injury prevention for the Quantum Valley Problem Pitch compeititon. Atlas Medical acquired $5000 in funding to be used for R&D</p>
-								</header>
-								<a href="#" class="image main"><img src="images/quantum_valley.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
-							</article>
+        <!-- Nav -->
+        <nav id="nav">
+            <ul class="links">
+                <li class="active"><a href="index.html">News</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
 
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">November 2, 2019</span>
-										<h2><a href="#">Baylis Medical<br />
-										Capstone Design Award Winner</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/baylis.png" alt="" /></a>
-									<p>Jake Fisher from Atlas Medical convinced a panel of five judges that Atlas has the capability to build pressure injury prevention technology. Through this award Atlas Medical recieved $3000 in funding.</p>
-									<ul class="actions special">
+        <!-- Main -->
+        <div id="main">
+
+            <!-- Featured Post -->
+
+            <article class="post featured">
+                <header class="major">
+                    <span class="date">November 2, 2018</span>
+                    <h2><a href="#">Baylis Medical<br />
+                            Capstone Design Award Winner</a></h2>
+                </header>
+                <a href="#" class="image fit"><img src="images/baylis.png" alt="" /></a>
+                <p>Jake Fisher from Atlas Medical convinced a panel of five judges that Atlas has the capability to
+                    build pressure injury prevention technology. Through this award Atlas Medical recieved $3000 in
+                    funding.</p>
+
+            </article>
+
+            <!-- Posts -->
+            <section class="posts">
+                <article>
+                    <header>
+                        <span class="date">December 21, 2018</span>
+                        <h2><a href="#">Waterloo Enginering Competition<br />
+                                Innovative Design Winner</a></h2>
+                    </header>
+                    <a href="#" class="image fit"><img src="images/sff.jpg" alt="" /></a>
+                    <p>Atlas Medical was selected to represent the University of Waterloo in the Ontario Engineering
+                        Competition for the category of Innovative Design. The team will attend the competion at
+                        McMaster University from January 18th - 20th.</p>
+                    <!-- <ul class="actions special">
+                                                <li><a href="#" class="button">Full Story</a></li>
+                                            </ul> -->
+                </article>
+                <article>
+                    <header>
+                        <span class="date">November 8, 2018</span>
+                        <h2><a href="#">Velocity $5K Finals<br />
+                                Atlas Medical moves to the Velocity $5K finals</a></h2>
+                    </header>
+                    <a href="#" class="image fit"><img src="images/v5k.png" alt="" /></a>
+                    <p>Michael Jonas pitched the Atlas P1 as a solution for pressure injury prevention, the judges
+                        agreed with the value proposition and Atlas moved to the finals.</p>
+                    <!-- <ul class="actions special">
+                                                <li><a href="#" class="button">Full Story</a></li>
+                                            </ul> -->
+                </article>
+                <article>
+                    <header>
+                        <span class="date">November 1, 2018</span>
+                        <h2><a href="#">Quantum Valley Problem Pitch<br />
+                                Open Problem Winner</a></h2>
+                    </header>
+                    <a href="#" class="image main"><img src="images/quantum_valley.jpg" alt="" /></a>
+
+                    <p>Colin Cooke from Atlas Medical succesfully pitched the problem of pressure injury prevention for
+                        the Quantum Valley Problem Pitch compeititon. Atlas Medical acquired $5000 in funding to be
+                        used for R&D</p>
+
+                </article>
+                <article>
+                    <header>
+                        <span class="date">November 2, 2018</span>
+                        <h2><a href="#">Baylis Medical<br />
+                                Capstone Design Award Winner</a></h2>
+                    </header>
+                    <a href="#" class="image fit"><img src="images/baylis.png" alt="" /></a>
+                    <p>Jake Fisher from Atlas Medical convinced a panel of five judges that Atlas has the capability to
+                        build pressure injury prevention technology. Through this award Atlas Medical recieved $3000 in
+                        funding.</p>
+                    <!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
+									</ul> -->
+                </article>
+
+
+                <!-- <article>
 									<header>
 										<span class="date">April 14, 2017</span>
 										<h2><a href="#">Tempus sed<br />
@@ -130,90 +160,49 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
-							</section>
+								</article> -->
+            </section>
 
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
+            <!-- Footer -->
+            <footer>
+                <div class="pagination">
+                    <!--<a href="#" class="previous">Prev</a>-->
+                    <a href="#" class="page active">1</a>
+                    <!-- <a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
+									<a href="#" class="page">10</a> -->
+                    <!-- <a href="#" class="next">Next</a> -->
+                </div>
+            </footer>
 
-					</div>
+        </div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
+        <footer id="footer">
+            <div id="footer"></div>
+        </footer>
 
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+        
+        <div id="copyright">
+            <ul>
+                <li>&copy; Atlas Medical</li>
+                <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
 
-			</div>
+    </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
