Uncommenting footer script

--- a/blog.html
+++ b/blog.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/blog.css" />
     <script src="assets/js/jquery.min.js"></script>
-    <!-- <script> 
+    <script> 
     $(function(){
       $("#footer").load("footer.html"); 
     });
-    </script>  -->
+    </script> 
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
