--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="shortcut icon" href="images/favicon.png">
+
     <script src="assets/js/jquery.min.js"></script>
     <script> 
     $(function(){
@@ -79,9 +81,7 @@
                     <p>Atlas Medical was selected to represent the University of Waterloo in the Ontario Engineering
                         Competition for the category of Innovative Design. The team will attend the competion at
                         McMaster University from January 18th - 20th.</p>
-                    <!-- <ul class="actions special">
-                                                <li><a href="#" class="button">Full Story</a></li>
-                                            </ul> -->
+
                 </article>
                 <article>
                     <header>
