--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/blog.css" />
+    <link rel="shortcut icon" href="images/favicon.png">
+
     <script src="assets/js/jquery.min.js"></script>
     <script> 
     $(function(){
