--- a/blog.html
+++ b/blog.html
@@ -36,12 +36,13 @@
 
         <!-- Nav -->
         <nav id="nav">
-            <ul class="links">
-                <li><a href="index.html">News</a></li>
-                <li><a href="about.html">About</a></li>
-                <li class="active"><a href="blog.html">Blog</a></li>
-            </ul>
-        </nav>
+                <ul class="links">
+                    <li><a href="index.html">Project</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="team.html">Team</a></li>
+                    <li class="active"><a href="blog.html">Blog</a></li>
+                </ul>
+            </nav>
 
         <section id='blog_1-content' class="overlay" aria-hidden="true">
             <div>
@@ -62,18 +63,7 @@
 
             <!-- Featured Post -->
 
-            <article class="post featured">
-                <header class="major">
-                    <span class="date">January 15, 2019</span>
-                    <h2>First Post<br />
-                            First blog post of the season</h2>
-                </header>
-                <!-- <a href="#" class="image fit"><img src="images/baylis.png" alt="" /></a> -->
-                <p>Throughout this Winter Atlas Medical will be highlighting development milestones.</p>
-                <ul class="actions special">
-                    <li><button type="button" class="open-overlay" id='blog_1-open'>Full Story</button></li>
-                </ul>
-            </article>
+
    
 
             <!-- Posts -->
@@ -89,17 +79,7 @@
                             <li><button type="button" class="open-overlay" id='blog_1-open'>Full Story</button></li>
                         </ul>
                     </article>
-                <article>
-                    <header>
-                        <span class="date">January 16, 2019</span>
-                        <h2>Website Launch!<br />
-                                The website is now live</h2>
-                    </header>
-                    <ul class="actions special">
-                        <li><button type="button" class="open-overlay" id='blog_2-open'>Full Story</button></li>
-                    </ul>
-                </article>
-           
+
             </section>
 
             <!-- Footer -->
