Make fixes and add updates to written content

--- a/news.html
+++ b/news.html
@@ -51,24 +51,24 @@
                 <article>
                     <header>
                         <span class="date">December 21, 2018</span>
-                        <h2><a href="http://www.wec.uwaterloo.ca/competitions/innovative-design/">Waterloo Enginering Competition<br />
-                                Innovative Design Winner</a></h2>
+                        <h2><a href="http://www.wec.uwaterloo.ca/competitions/innovative-design/" target="_blank">Waterloo Engineering Competition</a></h2>
+                        <h3>Innovative Design Winner</h3>
                     </header>
-                    <a href="http://www.wec.uwaterloo.ca/competitions/innovative-design/" class="image fit"><img src="images/sff.jpg" alt="" /></a>
-                    <p>Atlas Medical was selected to represent the University of Waterloo in the Ontario Engineering
-                        Competition for the category of Innovative Design. The team will attend the competion at
-                        McMaster University from January 18th - 20th.</p>
+                    <a href="http://www.wec.uwaterloo.ca/competitions/innovative-design/" target="_blank" class="image fit"><img src="images/sff.jpg" alt="" /></a>
+                    <p>Atlas Medical was selected to represent the University of Waterloo at the Ontario Engineering
+                        Competition in the category of Innovative Design. The team will attend the competition at
+                        McMaster University from January 18 to 20.</p>
 
                 </article>
                 <article>
                     <header>
                         <span class="date">November 8, 2018</span>
-                        <h2><a href="http://velocityfundfinals.com/finalists/">Velocity $5K Finals<br />
-                                Atlas Medical moves to the Velocity $5K finals</a></h2>
+                        <h2><a href="http://velocityfundfinals.com/finalists/" target="_blank">Velocity $5K Finals</a></h2>
+                        <h3>Atlas Medical advances to the Velocity $5K finals</h3>
                     </header>
-                    <a href="http://velocityfundfinals.com/finalists/" class="image fit"><img src="images/v5k.png" alt="" /></a>
+                    <a href="http://velocityfundfinals.com/finalists/" target="_blank" class="image fit"><img src="images/v5k.png" alt="" /></a>
                     <p>Michael Jonas pitched the Atlas P1 as a solution for pressure injury prevention, the judges
-                        agreed with the value proposition and Atlas moved to the finals.</p>
+                        agreed with the value proposition and Atlas Medical has advanced to the finals.</p>
                     <!-- <ul class="actions special">
                                                 <li><a href="#" class="button">Full Story</a></li>
                                             </ul> -->
@@ -76,25 +76,23 @@
                 <article>
                         <header>
                             <span class="date">November 2, 2018</span>
-                            <h2><a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award">Baylis Medical<br />
-                                    Capstone Design Award Winner</a></h2>
+                            <h2><a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" target="_blank">Baylis Medical</a></h2>
+                            <h3>Capstone Design Award Winner</h3>
                         </header>
-                        <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" class="image fit"><img src="images/baylis_square.png" alt="" /></a>
-                        <p>Jake Fisher from Atlas Medical convinced a panel of five judges that Atlas has the capability to
-                            build pressure injury prevention technology. Through this award Atlas Medical recieved $3000 in
-                            funding.</p>
+                        <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" target="_blank" class="image fit"><img src="images/baylis_square.png" alt="" /></a>
+                        <p>Atlas Medical's Jake Fisher pitched to a panel of five judges and outlined the company's pressure injury prevention technology. By winning the award, Atlas Medical took home over $3000 in funding.</p>
                     </article>
                 <article>
                     <header>
                         <span class="date">November 1, 2018</span>
-                        <h2><a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award">Quantum Valley Problem Pitch<br />
-                                Open Problem Winner</a></h2>
+                        <h2><a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" target="_blank">Quantum Valley Problem Pitch</a></h2>
+                        <h3>Open Problem Winner</h3>
                     </header>
-                    <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" class="image fit"><img src="images/quantum_valley.jpg" alt="" /></a>
+                    <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" target="_blank" class="image fit"><img src="images/quantum_valley.jpg" alt="" /></a>
 
-                    <p>Colin Cooke from Atlas Medical succesfully pitched the problem of pressure injury prevention for
-                        the Quantum Valley Problem Pitch compeititon. Atlas Medical acquired $5000 in funding to be
-                        used for R&D</p>
+                    <p>Atlas Medical's Colin Cooke successfully pitched the problem of pressure injury prevention for
+                        the Quantum Valley Problem Pitch competition. Atlas Medical acquired $5000 in funding to be
+                        used for research and development.</p>
 
                 </article>
 
@@ -163,7 +161,6 @@
         <div id="copyright">
             <ul>
                 <li>&copy; Atlas Medical</li>
-                <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
             </ul>
         </div>
 </div>
