--- a/blog.html
+++ b/blog.html
@@ -51,9 +51,18 @@
             </div>
         </section>
 
-        <section id='blog_2-content' class="overlay" aria-hidden="true">
-                <div>
-                    <p>We're live!</p>
+        <section id='blog_2-content' class="overlay posts" aria-hidden="true">
+
+                <div style="width: 50%; margin-block-start: 5%; margin-block-end: 5%;">
+                    <h3>Atlas Medical wins the Ontario Engineering Competition Innovative Design Category</h2>
+                    <p>Atlas Medical has a singular goal: prevent pressure injuries through the development of intelligent pressure redistribution systems. On January 20, Atlas Medical won first place in the Innovative Design category at the Ontario Engineering Competition and also took home the Social Awareness award. This success validates both the technological trajectory and the overall mission of Atlas Medical. </p>
+                    
+                    <p>
+                    We are proud to bring more attention to preventing pressure injuries and to be given the opportunity to represent the University of Waterloo at the Canadian Engineering Competition in March.
+                    </p>
+                    <span class="image fit"><img src="images/OEC_2019.jpg" alt=""></span>
+
+                    
                     <button type="button"  id="blog_2-close" class="close-overlay">Close</button>
                 </div>
         </section>
@@ -77,6 +86,17 @@
                         <p>Throughout this Winter Atlas Medical will be highlighting development milestones.</p>
                         <ul class="actions special">
                             <li><button type="button" class="open-overlay" id='blog_1-open'>Full Story</button></li>
+                        </ul>
+                    </article>
+                    <article>
+                        <header>
+                            <span class="date">January 20, 2019</span>
+                            <h2>Atlas Medical wins the Ontario Engineering Competition Innovative Design Category
+                                    First blog post of the season</h2>
+                        </header>
+                        <p>Atlas Medical won both the Innovative Design award, as well as the Social Awareness award.</p>
+                        <ul class="actions special">
+                            <li><button type="button" class="open-overlay" id='blog_2-open'>Full Story</button></li>
                         </ul>
                     </article>
 
