Adding OEC post

--- a/news.html
+++ b/news.html
@@ -51,6 +51,16 @@
                 <article>
                     <header>
                         <span class="date">December 21, 2018</span>
+                        <h2><a href="https://uwaterloo.ca/engineering/news/engineering-teams-across-canada-compete-waterloo" target="_blank">Ontario Engineering Competition</a></h2>
+                        <h3>Innovative Design Winner</h3>
+                    </header>
+                    <a href="https://uwaterloo.ca/engineering/news/engineering-teams-across-canada-compete-waterloo" target="_blank" class="image fit"><img src="images/oec_win.jpg" alt="" /></a>
+                    <p>At the Ontario Engineering Competition, Atlas Medical won first prize in the Innovative Design category and took home the Social Awareness award. With these results, the team has advanced to the Canadian Engineering Competition in March.</p>
+
+                </article>
+                <article>
+                    <header>
+                        <span class="date">December 21, 2018</span>
                         <h2><a href="http://www.wec.uwaterloo.ca/competitions/innovative-design/" target="_blank">Waterloo Engineering Competition</a></h2>
                         <h3>Innovative Design Winner</h3>
                     </header>
