Minor wording fix

--- a/blog.html
+++ b/blog.html
@@ -115,7 +115,7 @@
             <p> Our Pneumatics Control Board arrived today!
                 <br/>
                 <br/>
-                The solenoid valves that we are using have the easiest control and mechanical interface of any industrial or hobby valves that we could source in a reasonable amount of time. Unfortunately, they draw a large amount of power; 6 watts at 12 VDC. That is over 500 mA of current! Originally, we were going to place all of our pneumatics electronics on a protoboard, however, this posed some safety concerns. We needed a way to safely route and control this amount of current and we decided that a protoboard is not the best solution due to messy wiring and lots of exposed connections.
+                The solenoid valves that we are using have the easiest control and mechanical interface of any industrial or hobby valves that we could source in a reasonable amount of time. Unfortunately, they draw a large amount of power; 6 watts at 12 VDC. That is 500 mA of current! Originally, we were going to place all of our pneumatics electronics on a protoboard, however, this posed some safety concerns. We needed a way to safely route and control this amount of current and we decided that a protoboard is not the best solution due to messy wiring and lots of exposed connections.
                 <br/>
                 <br/>
                 For this reason, we opted to design another PCB (on top of the other two custom boards we already have) to safely control the valves. We call this one the PCB PCB (pneumatics control board printed circuit board).
