From capstone to company

--- a/news.html
+++ b/news.html
@@ -40,7 +40,6 @@
                 <li><a href="index.html">Project</a></li>
                 <li class="active"><a href="news.html">News</a></li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
 
@@ -50,7 +49,37 @@
             <section class="posts">
                 <article>
                     <header>
-                        <span class="date">January 20, 2019</span>
+                        <span class="date">April 2, 2019</span>
+                        <h2><a href="https://twitter.com/WaterlooENG/status/1113189531401031680" target="_blank">Norman Esch Entrepreneurship Award</a></h2>
+                        <h3>Atlas Medical wins Esch award</h3>
+                    </header>
+                    <a href="https://twitter.com/WaterlooENG/status/1113189531401031680" target="_blank" class="image fit"><img src="images/norman_esch.jpg" alt="" /></a>
+                    <p>Atlas Medical was selected as a recipient of a $10,000 Norman Esch Entrepreneurship Award. Six of these awards are presented every year to capstone teams who have proposed a viable business plan for their project.</p>
+
+                </article>
+                <article>
+                    <header>
+                        <span class="date">March 26, 2019</span>
+                        <h2><a href="https://www.ontario.ca/page/ministry-seniors-accessibility" target="_blank">MSAA Grant Funding</a></h2>
+                        <h3>$5,000 grant from Ontario Government</h3>
+                    </header>
+                    <a href="https://www.ontario.ca/page/ministry-seniors-accessibility" target="_blank" class="image fit"><img src="images/ontario_logo.jpg" alt="" /></a>
+                    <p>Through its participation in the Velocity Fund pitch competition, Atlas Medical received a $5,000 grant from the Ontario Ministry for Seniors and Accessibility. Atlas Medical was selected for this award as a venture that is tackling an accessibility issue. The funds will be used to further develop Atlas Medical's project and prototype.</p>
+
+                </article>
+                <article>
+                    <header>
+                        <span class="date">March 3, 2019</span>
+                        <h2><a href="http://cec.cfes.ca/" target="_blank">Canadian Engineering Competition</a></h2>
+                        <h3>Innovative Design, Third Place</h3>
+                    </header>
+                    <a href="http://cec.cfes.ca/" target="_blank" class="image fit"><img src="images/cec.jpg" alt="" /></a>
+                    <p>Atlas Medical placed third in the Innovative Design category at the Canadian Engineering Competition. Atlas Medical is pleased to be recognized at the national level and sends its congratulations to all other teams who competed.</p>
+
+                </article>
+                <article>
+                    <header>
+                        <span class="date">January 19, 2019</span>
                         <h2><a href="https://uwaterloo.ca/engineering/news/engineering-teams-across-canada-compete-waterloo" target="_blank">Ontario Engineering Competition</a></h2>
                         <h3>Innovative Design Winner</h3>
                     </header>
@@ -73,10 +102,10 @@
                 <article>
                     <header>
                         <span class="date">November 8, 2018</span>
-                        <h2><a href="http://velocityfundfinals.com/finalists/" target="_blank">Velocity $5K Finals</a></h2>
+                        <h2><a href="http://velocityfundfinals.com/" target="_blank">Velocity $5K Finals</a></h2>
                         <h3>Atlas Medical advances to the Velocity $5K finals</h3>
                     </header>
-                    <a href="http://velocityfundfinals.com/finalists/" target="_blank" class="image fit"><img src="images/v5k.png" alt="" /></a>
+                    <a href="http://velocityfundfinals.com/" target="_blank" class="image fit"><img src="images/velocity.jpg" alt="" /></a>
                     <p>Michael Jonas pitched the Atlas P1 as a solution for pressure injury prevention, the judges
                         agreed with the value proposition and Atlas Medical has advanced to the finals.</p>
                     <!-- <ul class="actions special">
@@ -89,19 +118,19 @@
                             <h2><a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" target="_blank">Baylis Medical</a></h2>
                             <h3>Capstone Design Award Winner</h3>
                         </header>
-                        <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" target="_blank" class="image fit"><img src="images/baylis_square.png" alt="" /></a>
-                        <p>Atlas Medical's Jake Fisher pitched to a panel of five judges and outlined the company's pressure injury prevention technology. By winning the award, Atlas Medical took home over $3000 in funding.</p>
+                        <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" target="_blank" class="image fit"><img src="images/baylis_medical.png" alt="" /></a>
+                        <p>Atlas Medical's Jake Fisher pitched to a panel of five judges and outlined the company's pressure injury prevention technology. By winning the award, Atlas Medical took home over $3,000 in funding.</p>
                     </article>
                 <article>
                     <header>
                         <span class="date">November 1, 2018</span>
                         <h2><a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" target="_blank">Quantum Valley Problem Pitch</a></h2>
-                        <h3>Open Problem Winner</h3>
+                        <h3>Open Problems Winner</h3>
                     </header>
                     <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/news/atlas-medical-wins-two-pitch-competitions-granted-award" target="_blank" class="image fit"><img src="images/quantum_valley.jpg" alt="" /></a>
 
                     <p>Atlas Medical's Colin Cooke successfully pitched the problem of pressure injury prevention for
-                        the Quantum Valley Problem Pitch competition. Atlas Medical acquired $5000 in funding to be
+                        the Quantum Valley Problem Pitch competition. Atlas Medical acquired $10,000 in funding to be
                         used for research and development.</p>
 
                 </article>
