Fix email link in footer.html

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
                 
         <section>
             <h3>Email</h3>
-            <p><a href="#">info@atlasmedical.co</a></p>
+            <p><a href="mailto:info@atlasmedical.co">info@atlasmedical.co</a></p>
         </section>
         <!-- <section>
             <h3>Social</h3>
